refactor: session model, get auth token controller and documentation
